--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #257355; /* Dark theme thumb */
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #257355; /* Hover effect */
+}
+::-webkit-scrollbar-track {
+    background-color: #01160E; /* Dark theme track */
+    border-radius: 10px;
+}
 .bg-theme-dark {
     background-color:#01160E;
 }
 .bg-theme-light {
     background-color: #093826;
+    /* background-color: #257355; */
 }
