Corrected some font, added the icons; and did some overall code strucure.

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
     background-color:#01160E;
 }
 .bg-theme-light {
-    background-color: #00291a;
+    background-color: #00190F;
     /* background-color: #257355; */
 }
 .text-theme-dark {
