--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,50 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Set scrollbar width for vertical scrolling */
 ::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
+    /* Set height for horizontal scrollbar */
 }
+
+/* Scrollbar thumb (draggable part) */
 ::-webkit-scrollbar-thumb {
-    background-color: #257355; /* Dark theme thumb */
+    background-color: #257355;
+    /* Dark theme thumb */
     border-radius: 10px;
 }
+
+/* Hover effect on scrollbar thumb */
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #257355; /* Hover effect */
+    background-color: #257355;
 }
+
+/* Scrollbar track (background) */
 ::-webkit-scrollbar-track {
-    background-color: #01160E; /* Dark theme track */
+    background-color: transparent;
+    /* Dark theme track */
     border-radius: 10px;
 }
+
 .bg-theme-dark {
-    background-color:#01160E;
+    background-color: #01160E;
 }
+
 .bg-theme-light {
     background-color: #00190F;
     /* background-color: #257355; */
 }
+
 .text-theme-dark {
-    color:#01160E;
+    color: #01160E;
 }
+
 .text-theme-light {
     color: #00291a;
 }
+
 .text-theme-bright-light {
     color: #00bd78;
 }
